# orchestrated-streetrack-be

./: .coverage  .dockerignore  .env.example  .gitignore  BACKLOG.md  Dockerfile  README.md  STATE.md  TECHSPEC.md  alembic.ini  fly.toml  pyproject.toml
.cursor/gsd/: README.md
.cursor/rules/: gsd-git-workflow.mdc
.planning/: TECHSPEC-AUDIT.md  phase-00-ROADMAP.md  phase-01-SPEC.md  phase-01-SUMMARY.md  phase-02-SPEC-BUGFIX-psycopg2-dll.md  phase-02-SPEC.md  phase-02-SUMMARY.md  phase-03-SPEC.md  phase-03-SUMMARY.md  phase-04-SPEC.md  phase-04-SUMMARY.md  phase-05-SPEC.md  phase-05-SUMMARY.md  phase-06-SPEC.md  phase-06-SUMMARY.md  phase-07-SPEC.md  phase-07-SUMMARY.md  phase-08-SPEC.md  phase-08-SUMMARY.md  phase-09-SPEC.md  phase-09-SUMMARY.md  phase-10-SPEC.md  phase-10-SUMMARY.md  phase-11-SPEC.md  phase-11-SUMMARY.md  phase-12-SPEC.md  phase-12-SUMMARY.md  phase-13-SPEC.md  phase-13-SUMMARY.md  phase-14-SPEC.md  phase-14-SUMMARY.md  phase-15-SPEC.md  phase-15-SUMMARY.md  phase-16-SPEC.md  phase-16-SUMMARY.md  phase-17-SPEC.md  phase-17-SUMMARY.md  phase-18-SPEC.md  phase-18-SUMMARY.md  phase-19-SPEC.md  (+3 more)
alembic/: README  env.py
alembic/versions/: 837ee5832ce5_initial_schema_categories_subcategories_.py  b1c4e8f2a0d3_fk_restrict_category_subcategory.py  fa33b7335fb1_add_subcategory_is_periodic_and_due_day.py
app/: __init__.py  auth.py  main.py
app/db/: __init__.py  base.py  config.py  session.py
app/models/: __init__.py  category.py  hangout.py  subcategory.py  transaction.py
app/routers/: __init__.py  category.py  dashboard.py  (+4 more)
tests/: conftest.py
(+36 files in other folders)
